# ai-school

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md
.claude/: settings.local.json
backend/: .env.example  pyproject.toml
backend/migrations/: 001_initial_schema.sql  002_add_observability.sql  003_add_cancel_column.sql
backend/src/: __init__.py  config.py  main.py
backend/src/api/: routes.py
backend/src/clients/: gemini.py  remotion.py
backend/src/evals/: __init__.py  timeline_eval.py
backend/src/models/: __init__.py  database.py  job.py
backend/src/queue/: __init__.py  job_queue.py
backend/src/schemas/: __init__.py  job.py  timeline.py
backend/src/services/: content_generator.py  image_generator.py  pdf_extractor.py  storage.py  tts.py
backend/src/utils/: __init__.py  retry.py
backend/src/worker/: __init__.py  processor.py
backend/tests/: test_api_routes.py  test_content_generator.py  test_image_generator.py  test_pdf_extractor.py  test_remotion_client.py  test_storage.py  test_timeline_eval.py  test_tts.py  test_worker.py
renderer/: package-lock.json  package.json  tsconfig.json
renderer/src/: index.ts  server.ts
renderer/src/remotion/: Composition.tsx  Root.tsx  types.ts
renderer/src/remotion/components/: Slide.tsx
renderer/src/render/: renderVideo.ts
